Tabview cursor fix, grid fix, fixes 1 pixel overlap in modal dialogs

--- a/src/rednose-ui/less/layout.less
+++ b/src/rednose-ui/less/layout.less
@@ -31,7 +31,6 @@ body, html,
 .rednose-unit-left {
   height:100%;
   position:absolute;
-  left:0;
   width: 280px;
   border-right: 1px solid #ddd;
 }
